Change profile pictures' size and fix alignment

--- a/styles.css
+++ b/styles.css
@@ -236,8 +236,8 @@ body {
 }
 
 .profile-pic {
-  width: 40px;
-  height: 40px;
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
 }
 
@@ -430,6 +430,7 @@ body {
 
 .trending .user {
   grid-area: user;
+  align-self: end;
 }
 
 .trending .description {
